--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,8 @@ dependencies = [
     "httpx>=0.26.0",
     "rich>=13.7.0",
     "psutil>=5.9.8",
+    "huggingface-hub>=0.20.0",
+    "tqdm>=4.66.0",
 ]
 
 [project.optional-dependencies]
