--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dev = [
     "pytest>=7.4.0",
     "pytest-asyncio>=0.21.0",
     "pytest-cov>=4.1.0",
+    "pytest-benchmark>=4.0.0",
     "black>=23.12.0",
     "ruff>=0.1.11",
     "mypy>=1.8.0",
